--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
   },
-  "includes": ["."]
+  "include": ["global.d.ts", "."],
+  "exclude": ["node_modules"]
 }
